<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_padding"
    android:paddingRight="@dimen/activity_padding">

    <ImageView
        android:id="@+id/iv_s_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:contentDescription="@string/logo_description"
        android:minHeight="103dp"
        android:minWidth="100dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_s_welcome_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_s_app_logo"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/welcome_to_ejournal"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-thin" />

    <LinearLayout
        android:id="@+id/ll_s_user_id_container"
        style="@style/login_input_fields_container"
        android:layout_below="@+id/tv_s_welcome_note">

        <io.github.henryejemuta.journalapp.widget.IconTextView
            style="@style/login_input_fields_icon"
            android:text="@string/icon_user" />

        <EditText
            android:id="@+id/et_s_login_user_id"
            style="@style/login_input_fields"
            android:hint="@string/email"
            android:imeActionLabel="Password"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_s_user_password_container"
        style="@style/login_input_fields_container"
        android:layout_below="@+id/ll_s_user_id_container">

        <io.github.henryejemuta.journalapp.widget.IconTextView
            style="@style/login_input_fields_icon"
            android:text="@string/icon_lock" />

        <EditText
            android:id="@+id/et_s_login_password"
            style="@style/login_input_fields"
            android:hint="@string/enter_password"
            android:imeActionLabel="Login"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_s_sign_up"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="40dp"
        android:layout_below="@+id/ll_s_user_password_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_s_already_signed_up"
        style="@style/login_common_style"
        android:layout_below="@+id/btn_s_sign_up"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/already_have_an_account" />

    <LinearLayout
        android:layout_below="@+id/tv_s_already_signed_up"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <io.github.henryejemuta.journalapp.widget.IconTextView
            style="@style/login_common_style"
            android:text="@string/icon_sign_in"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/tv_s_login"
            style="@style/login_common_style"
            android:text="@string/login_here"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_s_forgot_password"
        style="@style/login_common_style"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textStyle="bold" />
</RelativeLayout>