<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_padding"
    android:paddingRight="@dimen/activity_padding">

    <ImageView
        android:id="@+id/iv_s_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:contentDescription="@string/logo_description"
        android:minHeight="103dp"
        android:minWidth="100dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_s_welcome_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_s_app_logo"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/enter_password_to_reset"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-thin" />

    <LinearLayout
        android:id="@+id/ll_r_email_container"
        style="@style/login_input_fields_container"
        android:layout_below="@+id/tv_s_welcome_note">

        <TextView
            android:id="@+id/tv_r_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:background="@drawable/custom_background"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:visibility="gone" />

        <io.github.henryejemuta.journalapp.widget.IconTextView
            style="@style/login_input_fields_icon"
            android:text="@string/icon_at" />

        <EditText
            android:id="@+id/et_r_email"
            style="@style/login_input_fields"
            android:hint="@string/email"
            android:imeActionLabel="Password"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_r_reset_password"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="40dp"
        android:layout_below="@+id/ll_r_email_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/button_background"
        android:text="@string/reset_password"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_r_login"
        style="@style/login_common_style"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_here"
        android:textAlignment="center"
        android:textStyle="bold" />
</RelativeLayout>