<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_padding"
    android:paddingRight="@dimen/activity_padding">

    <ImageView
        android:id="@+id/iv_v_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:contentDescription="@string/logo_description"
        android:minHeight="103dp"
        android:minWidth="100dp"
        android:src="@mipmap/ic_launcher" />
    <TextView
        android:id="@+id/tv_v_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_v_app_logo"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        android:shadowColor="@color/colorTransparentPrimaryDark"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1.5"
        app:fontFamily="sans-serif-thin" />

    <LinearLayout
        android:id="@+id/tv_v_status_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_v_app_name"
        android:orientation="vertical"
        android:background="@drawable/custom_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_verification_heading"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-thin" />

        <TextView
            android:id="@+id/tv_v_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-thin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/email_verification_heading_instruction"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:paddingTop="0dp"
        app:fontFamily="sans-serif-thin" />

</LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_v_status_body"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_v_sign_out"
            style="@style/primary_button_style"
            android:layout_width="0dp"
            android:layout_gravity="center|start"
            android:layout_weight="1.4"
            android:text="@string/sign_out" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center|start"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/btn_v_verify_email"
            style="@style/primary_button_style"
            android:layout_width="0dp"
            android:layout_gravity="center|end"
            android:layout_weight="1.4"
            android:text="@string/verify_email" />
    </LinearLayout>

</RelativeLayout>